Fix typos and separate file edits from data preparation and exploration

--- a/data_preparation_notebook.ipynb
+++ b/data_preparation_notebook.ipynb
@@ -31,7 +31,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To answer our first business question on finding the borough in London with the highest 5-year survival rate, we have to analyse past survival rates of businesses created in different years. Thus, we will analyse the sheets with the survival rates of businesses."
+    "# Survival Rates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To answer our first two business questions regarding survival rates, we have to analyse past survival rates of businesses created in different years. Thus, we will analyse the sheets with the survival rates of businesses."
    ]
   },
   {
@@ -59,7 +66,7 @@
    "source": [
     "At first glance, we identify several problems with the dataset and we can assume that these problems exist in all other sheets on survival rates.  \n",
     "\n",
-    "Firstly, the column names are mostly unnamed, so we know the first row of the dataset contains empty values. Thus we should re-read the Excel file and skip the first row.\n"
+    "Firstly, the column names are mostly unnamed, so we know the first row of the dataset contains empty values. Thus, we should re-read the Excel file and skip the first row.\n"
    ]
   },
   {
@@ -79,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Secondly, we can drop the columns that represent the survival rates in numbers as the percentage of businesses contains sufficient information about the survival rates for each borough. We can also drop the 'Births' column. "
+    "Secondly, we can drop the columns that represent the survival rates in numbers as this data is better represented as a percentage of business 'births' in that year. We can also drop the 'Births' column as it is not relevant to answering our business questions."
    ]
   },
   {
@@ -157,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After row 33, the data is on different regions in London. As this information is already contained in the above rows which details the survival rates in different boroughs of London, we can remove the rows below 33. We will also rename the column 'Borough' to 'Borough' to better reflect the information."
+    "After row 33, the data is on different regions in London. As this information is already contained in the above rows which detail the survival rates in different boroughs of London, we can remove the rows below 33. We will also rename the column 'Area' to 'Borough' to better reflect the information."
    ]
   },
   {
@@ -181,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logically, as we know that the data in this dataset only goes up to 2019, we know that later years would not have all the data for survival rates for surviving more than a year. We need to check the other sheets as well."
+    "Logically, as we know that the data in this dataset only goes up to 2019, we know that later years would not have all the data for survival rates for surviving more than a year. Thus, we need to check the other sheets as well."
    ]
   },
   {
@@ -218,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we are dealing with a lot of numbers, it is also important to check if the data type of each column are stored as numbers and not as strings. It would also be good to standardise that they are one decimal place."
+    "As we are dealing with a lot of numbers, it is also important to check if the data type of each column is stored as numbers and not as strings. It would also be good to standardise that they are one decimal place."
    ]
   },
   {
@@ -259,6 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Active Enterprises\n",
     "Another sheet in the Excel file that would be relevant to answering the business question is 'Active Enterprises by year'. "
    ]
   },
@@ -361,6 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Enterprise Deaths\n",
     "The last sheets that would be useful is 'Enterprise deaths by year' as we are concerned with looking into the death rate of enterprises. "
    ]
   },
@@ -457,7 +466,7 @@
    "outputs": [],
    "source": [
     "# Save only the relevant sheets \n",
-    "with pd.ExcelWriter('data/prepared_data.xlsx') as writer:  \n",
+    "with pd.ExcelWriter('data/prepared_data1.xlsx') as writer:  \n",
     "    activeenterprises.to_excel(writer, sheet_name='Active Enterprises by Year')\n",
     "    enterprisedeaths.to_excel(writer, sheet_name='Death Rates in % by Year')\n",
     "    for i in range(2002, 2019):\n",
