--- a/data_preparation_notebook.ipynb
+++ b/data_preparation_notebook.ipynb
@@ -456,7 +456,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, as the data is prepared, we will save the edited file as a new Excel file."
+    "# Saving the file\n",
+    "Now, as the data is prepared, we will save the edited sheets as a new Excel file."
    ]
   },
   {
