--- a/data_exploration_notebook.ipynb
+++ b/data_exploration_notebook.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is expected that the mean of each column will decrease because the proportion of businesses started in 2002 that are still alive decreases as we measure longer periods. To get a better visualisation of the data, we will do a simple line graph of the 1, 2, 3, 4 and 5 year survival rates of businesses that started in 2002."
+    "From the descriptive statistics, we can see that there are 33 rows, which aligns with our contextual understanding that there are 33 boroughs in London including City of London. It is expected that the mean of each column will decrease because the proportion of businesses started in 2002 that are still alive decreases as we measure longer periods. To get a better visualisation of the data, we will do a simple line graph of the 1, 2, 3, 4 and 5 year survival rates of businesses that started in 2002."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From looking at the data, it makes more sense to view the descriptive statistics of the data by borough. This is because the number of active enterprsies varies greatly by borough, but less so throughout the years."
+    "From looking at the data, it makes more sense to view the descriptive statistics of the data by borough. This is because the number of active enterprsies varies greatly by borough, but less so throughout the years. Thus, we will transpose the dataframe then view the descriptive statistics."
    ]
   },
   {
